[package]
name = "broadnym_client"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
chrono = { version = "0.4.38", features = ["serde"] }
console_error_panic_hook = "0.1"
futures = "0.3.30"
leptos = { version = ">=0.8.0, <0.8.4", features = ["csr"] }
leptos_meta = { version = ">=0.8.0, <0.8.4" }
num-format = "0.4.4"
reqwest = { version = "0.12.5", default-features = false, features = [ "json" ] }
serde_json = "1.0.122"
tokio = {version = "1.39.2", features = [ "io-util" ]}
tracing = "0.1.40"
tracing-wasm = "0.2.1"
web-sys = { version = "0.3.69", features = ["Navigator", "Clipboard"] }
itertools = "0.12.1"

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
