[package]
name = "broadnym_client"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
anyhow = "1.0.86"
bincode = { workspace = true }
chrono = { version = "0.4.38", features = ["serde"] }
console_error_panic_hook = "0.1"
futures = "0.3.30"
leptos = { version = ">=0.8.0, <0.8.4", features = ["csr"] }
leptos_meta = { version = ">=0.8.0, <0.8.4" }
nym-client-core = { git = "https://github.com/elsirion/nym", branch = "2025-08-wasm-fix", default-features = false }
nym-validator-client = { git = "https://github.com/elsirion/nym", branch = "2025-08-wasm-fix", default-features = false }
nym-task = { git = "https://github.com/elsirion/nym", branch = "2025-08-wasm-fix", default-features = false }
rand = { version = "0.8.5" }
reqwest = { version = "0.12.5", default-features = false, features = ["json"] }
serde = { workspace = true }
serde_json = "1.0.122"
tokio = {version = "1.39.2", features = [ "io-util" ]}
tracing = "0.1.40"
tracing-wasm = "0.2.1"
wasm-bindgen = "0.2"
web-sys = { version = "0.3.69", features = ["Navigator", "Clipboard"] }

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
